force-app/main/default/objects/Relation__x/Relation__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>public$xm_relation</externalName>
    <label>Relation</label>
    <pluralLabel>Relations</pluralLabel>
</CustomObject>