force-app/main/default/objects/Relation__x/fields/AppUser_1__c.field-meta.xml
<CustomField>
    <fullName>AppUser_1__c</fullName>
    <externalDeveloperName>user_one_id</externalDeveloperName>
    <label>Application User #1</label>
    <length>10</length>
    <referenceTo>AppUser__x</referenceTo>
    <relationshipLabel>Relations for Application User #1</relationshipLabel>
    <relationshipName>Relations_1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>