force-app/main/default/objects/Relation__x/fields/AppUser_2__c.field-meta.xml
<CustomField>
    <fullName>AppUser_2__c</fullName>
    <externalDeveloperName>user_two_id</externalDeveloperName>
    <label>Application User #2</label>
    <length>10</length>
    <referenceTo>AppUser__x</referenceTo>
    <relationshipLabel>Relations for Application User #2</relationshipLabel>
    <relationshipName>Relations_2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>