force-app/main/default/objects/Relation__x/fields/Relation_Id__c.field-meta.xml
<CustomField>
    <fullName>Relation_Id__c</fullName>
    <externalDeveloperName>relation_id</externalDeveloperName>
    <label>Relation Id</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>