force-app/main/default/objects/Relation__x/fields/User_One_ID__c.field-meta.xml
<CustomField>
    <fullName>User_One_ID__c</fullName>
    <externalDeveloperName>user_one_id</externalDeveloperName>
    <label>User One ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>