force-app/main/default/objects/Relation__x/fields/User_Two_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Two_ID__c</fullName>
    <externalDeveloperName>user_two_id</externalDeveloperName>
    <label>User Two ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>